# rtl-sdr-playground

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  control.h  fft.h  main.c  plot.c  run_dev_container.bat
src/: control.c  control.h  fft.c  fft.h  main.c  plot.c  plot.h  proc.c  proc.h  server.c  server.h  thread.c  thread.h
src/client/: client.py
